# garten

./: .env.example  README.md  build_dev  delete_and_rebuild  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  prompt.txt  tests
.github/workflows/: backend-ci.yml  frontend-ci.yml
apache/: Dockerfile  gartenapp-dev.conf  gartenapp.conf
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_harvest_watering_fertilizing.py  003_finance.py  004_messaging.py  005_duty.py  007_duty.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/audit/: models.py  router.py  schemas.py  service.py
backend/app/auth/: models.py  router.py  schemas.py  service.py  utils.py
backend/app/beds/: models.py  router.py  schemas.py  service.py
backend/app/duty/: models.py  router.py  schemas.py  service.py
backend/app/finance/: balance_calculator.py  models.py  router.py  schemas.py  service.py
backend/app/garden/: models.py  router.py  schemas.py  service.py
backend/app/harvest/: models.py  router.py  schemas.py  service.py
backend/app/messaging/: default_rules.py  models.py  router.py  schemas.py  service.py
backend/app/middleware/: audit_log.py
backend/app/plants/: models.py  router.py  schemas.py  service.py
backend/app/shopping/: models.py  router.py  schemas.py  service.py
backend/app/watering/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_beds.py  test_duty.py  test_edge_cases.py  test_finance.py  test_garden.py  test_harvest.py  test_health.py  test_messaging.py  test_plants.py  test_shopping.py  test_users.py  test_watering.py
docs/: architecture.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/scripts/: generate-icons.sh
frontend/src/: App.vue  main.ts
frontend/src/__tests__/: api-client.test.ts  auth-store.test.ts
frontend/src/api/: client.ts
frontend/src/components/layout/: AppBar.vue  BottomNav.vue  NavDrawer.vue
frontend/src/components/shared/: PhotoCapture.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: AdminView.vue  DashboardView.vue  DutyView.vue  FinanceView.vue  GardenView.vue  HarvestView.vue  LoginView.vue  MessagesView.vue  ShoppingView.vue  WateringView.vue
